# OpenCL-tutorial

./: .editorconfig  .gitignore  README.md  boil.ini  meson.build
doc/: .editorconfig  README.md  introduction.tex
include/: png++
include/CL/: cl2.hpp
scripts/: premeson.sh
src/: base.hh  meson.build  optional.hh
src/cl-info/: meson.build
src/cl-util/: compile.cc  get_gpu_context.cc  info.cc  meson.build  set_args.hh
src/fractal/: common.hh  meson.build  render.cc  types.hh
src/kernels/: julia.cl  lesson1.cl  lesson2.cl  lesson3.cl  mandel.cl
src/lesson1/: main.cc  meson.build
src/lesson2/: main.cc  meson.build
src/lesson3/: main.cc  meson.build
src/lesson4/: main.cc  mandel.cc  meson.build
src/lesson5/: main.cc  meson.build
src/misc/: colour.hh  colours.cc  console.hh  fancy_string.hh  format.hh  long_string.hh
test/: gtest-all.cc  test_test.cc
